initial node,npm,tailwind support with maven frontend plugin

--- a/spring-boot/crud-htmx-daisyui/src/main/resources/templates/person-crud-htmx.html
+++ b/spring-boot/crud-htmx-daisyui/src/main/resources/templates/person-crud-htmx.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Person CRUD Application</title>
+    <link rel="stylesheet" th:href="@{/main.css}" />
     <link rel="stylesheet" th:href="@{/_static/simpledotcss/2.3.1/simple.css}" />
     <script th:src="@{/webjars/github-com-bigskysoftware-htmx/1.9.12/htmx.min.js}"></script>
     <style>
