--- a/spring-boot/crud-htmx-daisyui/src/main/frontend/main.css
+++ b/spring-boot/crud-htmx-daisyui/src/main/frontend/main.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body > div{
+    @apply grid grid-cols-6 gap-4;
+    main, header, footer{
+        @apply col-start-2 col-span-4;
+    }
+}
+button {
+    @apply btn btn-primary;
+}
+header {
+    @apply navbar bg-base-100;
+}
+main{
+    
+}
+table{
+    @apply table table-zebra;
+    button{
+        @apply btn-sm;
+    }
+}
+dialog{
+    @apply modal;
+    form{
+        @apply modal-box;
+    }
+    menu{
+        @apply modal-action;
+    }
+    label{
+        @apply label;
+    }
+    input{
+        @apply input input-bordered w-full max-w-xs;
+    }
+}
+h1{
+    @apply text-4xl font-bold;
+}
+h2{
+    @apply text-lg font-bold;
+}
