--- a/spring-boot/crud-htmx-daisyui/src/main/resources/static/main.css
+++ b/spring-boot/crud-htmx-daisyui/src/main/resources/static/main.css
@@ -1005,6 +1005,10 @@ html {
   line-height: 1em;
 }
 
+.input-bordered {
+  border-color: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
 .input:focus,
   .input:focus-within {
   box-shadow: none;
@@ -1306,6 +1310,10 @@ html {
 
 .hidden {
   display: none;
+}
+
+.w-full {
+  width: 100%;
 }
 
 body > div {
@@ -1925,162 +1933,6 @@ dialog{
   .btm-nav > * label {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-  input {
-    flex-shrink: 1;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    height: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 1rem;
-    line-height: 2;
-    line-height: 1.5rem;
-    border-radius: var(--rounded-btn, 0.5rem);
-    border-width: 1px;
-    border-color: transparent;
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
-  }
-  input[type="number"]::-webkit-inner-spin-button {
-    margin-top: -1rem;
-    margin-bottom: -1rem;
-    margin-inline-end: -1rem;
-  }
-  input input {
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-p,oklch(var(--p)/var(--tw-bg-opacity)));
-    background-color: transparent;
-  }
-  input input:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-  }
-  input[list]::-webkit-calendar-picker-indicator {
-    line-height: 1em;
-  }
-  input {
-    border-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-  }
-  input:focus,input:focus-within {
-    box-shadow: none;
-    border-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-    outline-style: solid;
-    outline-width: 2px;
-    outline-offset: 2px;
-    outline-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-  }
-  input:focus,input:focus-within {
-    box-shadow: none;
-    border-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-    outline-style: solid;
-    outline-width: 2px;
-    outline-offset: 2px;
-    outline-color: var(--fallback-bc,oklch(var(--bc)/0.2));
-  }
-  input:has(> input[disabled]),input:disabled,input[disabled] {
-    cursor: not-allowed;
-    --tw-border-opacity: 1;
-    border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-    color: var(--fallback-bc,oklch(var(--bc)/0.4));
-  }
-  input:has(> input[disabled]),input:disabled,input[disabled] {
-    cursor: not-allowed;
-    --tw-border-opacity: 1;
-    border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-    color: var(--fallback-bc,oklch(var(--bc)/0.4));
-  }
-  input:has(> input[disabled]),input:disabled,input[disabled] {
-    cursor: not-allowed;
-    --tw-border-opacity: 1;
-    border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-    color: var(--fallback-bc,oklch(var(--bc)/0.4));
-  }
-  input:has(> input[disabled])::-moz-placeholder, input:disabled::-moz-placeholder, input[disabled]::-moz-placeholder {
-    color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity)));
-    --tw-placeholder-opacity: 0.2;
-  }
-  input:has(> input[disabled])::placeholder,input:disabled::placeholder,input[disabled]::placeholder {
-    color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity)));
-    --tw-placeholder-opacity: 0.2;
-  }
-  input:has(> input[disabled])::-moz-placeholder, input:disabled::-moz-placeholder, input[disabled]::-moz-placeholder {
-    color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity)));
-    --tw-placeholder-opacity: 0.2;
-  }
-  input:has(> input[disabled])::placeholder,input:disabled::placeholder,input[disabled]::placeholder {
-    color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity)));
-    --tw-placeholder-opacity: 0.2;
-  }
-  input:has(> input[disabled])::-moz-placeholder, input:disabled::-moz-placeholder, input[disabled]::-moz-placeholder {
-    color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity)));
-    --tw-placeholder-opacity: 0.2;
-  }
-  input:has(> input[disabled])::placeholder,input:disabled::placeholder,input[disabled]::placeholder {
-    color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity)));
-    --tw-placeholder-opacity: 0.2;
-  }
-  input:has(> input[disabled]) > input[disabled] {
-    cursor: not-allowed;
-  }
-  input::-webkit-date-and-time-value {
-    text-align: inherit;
-  }
-  .mockup-browser .mockup-browser-toolbar input {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    height: 1.75rem;
-    width: 24rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    --tw-bg-opacity: 1;
-    background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-    padding-left: 2rem;
-    direction: ltr;
-  }
-  .mockup-browser .mockup-browser-toolbar input:before {
-    content: "";
-    position: absolute;
-    left: 0.5rem;
-    top: 50%;
-    aspect-ratio: 1 / 1;
-    height: 0.75rem;
-    --tw-translate-y: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    border-radius: 9999px;
-    border-width: 2px;
-    border-color: currentColor;
-    opacity: 0.6;
-  }
-  .mockup-browser .mockup-browser-toolbar input:after {
-    content: "";
-    position: absolute;
-    left: 1.25rem;
-    top: 50%;
-    height: 0.5rem;
-    --tw-translate-y: 25%;
-    --tw-rotate: -45deg;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    border-radius: 9999px;
-    border-width: 1px;
-    border-color: currentColor;
-    opacity: 0.6;
-  }
-  input {
-    width: 100%;
-  }
-  input {
-    max-width: 20rem;
   }
 }
 
